# ChangeLog for dev-libs/dietlibc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/dietlibc/ChangeLog,v 1.80 2009/08/24 15:42:30 hollow Exp $

  24 Aug 2009; Benedikt Böhm <hollow@gentoo.org>
  -dietlibc-0.32_pre20081116.ebuild, dietlibc-0.33_pre20090721.ebuild:
  fix #111880 (again)

*dietlibc-0.33_pre20090721 (10 Aug 2009)

  10 Aug 2009; Benedikt Böhm <hollow@gentoo.org>
  -dietlibc-0.31_pre20070503.ebuild, -dietlibc-0.31_pre20070612.ebuild,
  -dietlibc-0.32_pre20080829.ebuild, -dietlibc-0.32.ebuild,
  +dietlibc-0.33_pre20090721.ebuild:
  version bump

*dietlibc-0.32 (10 Aug 2009)

  10 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> +dietlibc-0.32.ebuild:
  Version bump.

*dietlibc-0.32_pre20081116 (16 Nov 2008)

  16 Nov 2008; Benedikt Böhm <hollow@gentoo.org>
  +dietlibc-0.32_pre20081116.ebuild:
  new snapshot, fixes #227793

  03 Sep 2008; Benedikt Böhm <hollow@gentoo.org>
  dietlibc-0.32_pre20080829.ebuild:
  fix #236417

*dietlibc-0.32_pre20080829 (29 Aug 2008)

  29 Aug 2008; Benedikt Böhm <hollow@gentoo.org>
  +dietlibc-0.32_pre20080829.ebuild:
  new snapshot wrt #227429

  14 Mar 2008; Benedikt Böhm <hollow@gentoo.org> metadata.xml:
  fix metadata

*dietlibc-0.31_pre20070612 (12 Jun 2007)

  12 Jun 2007; Benedikt Böhm <hollow@gentoo.org>
  -dietlibc-0.31_pre20070611.ebuild, +dietlibc-0.31_pre20070612.ebuild:
  another prerelease; should fix #181261

*dietlibc-0.31_pre20070611 (11 Jun 2007)

  11 Jun 2007; Benedikt Böhm <hollow@gentoo.org>
  +dietlibc-0.31_pre20070611.ebuild:
  custom tarball with patches already included, see
  http://svn.linux-vserver.org/projects/dietlibc/

  23 May 2007; Raúl Porcel <armin76@gentoo.org> dietlibc-0.30-r2.ebuild:
  alpha stable wrt #179408

  23 May 2007; Jeroen Roovers <jer@gentoo.org> dietlibc-0.30-r2.ebuild:
  Stable for HPPA (bug #179408).

  22 May 2007; Christian Heim <phreak@gentoo.org>
  dietlibc-0.31_pre20070503.ebuild: