@@ -1,6 +1,6 @@
-DIST dietlibc-0.32_pre20081116.tar.bz2 580327 RMD160 15f2376a440514439b370838e027c5b0f87f67f7 SHA1 58d0842f1b254e3042cedea42a2a3e054b64844a SHA256 2206136d8f075d93382f9ac6fd32f9af2929ca48b1abc2f7e6239a7f322171b8
 DIST dietlibc-0.33_pre20090721.tar.bz2 587935 RMD160 1122b52aad5042454a6c3d4d8a180e51384294ca SHA1 55f6c372c720ca88bcaa523f5e590b65243cebdc SHA256 761d9c84b335a60546beae53695979196d60d2569f42daa4d112e01c1df122df
-EBUILD dietlibc-0.32_pre20081116.ebuild 1369 RMD160 3b1b700f8e2c99cb4a2fb6cdfd0ca0b515d15e96 SHA1 2f676a31da40307d6172efc0f0b544f6df0dbef5 SHA256 a70dcfa38349586b04356c84f9fb24702743ae378c10fc5267687d4c20247971
-EBUILD dietlibc-0.33_pre20090721.ebuild 1413 RMD160 733a4fc4f91069040aa31dd84ceb7903111f004f SHA1 87b8b104edbca90efb6c218ec666b3458cfca25f SHA256 596b7fa6fd241a7ea7c4fa6266244fb5b330a5c9a495036ce3b91bf092294e16
-MISC ChangeLog 11768 RMD160 69c61ee5d942be1b4b9043b668db113299a89099 SHA1 d3e9bcd3ce2de8de865d403155ae278978d00d3c SHA256 f1b63eb5e2b54e2cb0389be6736ee43ac9454cecdd8e49c92e9cb755d8f36481
+DIST dietlibc-0.33_pre20100626.tar.bz2 596013 RMD160 70fdd9ce982c2e5fe57189583cf8bffd19eaef54 SHA1 5aa7d10aae4f95af34e9184acdd725cf90f56a22 SHA256 62ae548997c6ccd05f5e2df8e96b36f517674b9e0fe6a1797c1eb892f7985a88
+EBUILD dietlibc-0.33_pre20090721.ebuild 1489 RMD160 5fa047f80fd6ed2e6fd5d7b03a66b5ed35dd258c SHA1 01db585fa0bf7c3c0e094bd712b474832a8991d2 SHA256 708628e3b91bdf5ce4d530bb83ff8811806364c3518caaac629e57efd01945d5
+EBUILD dietlibc-0.33_pre20100626.ebuild 1489 RMD160 4fa9c604f404400f236a0a90045f8845c251f303 SHA1 52dcfc698c585eeb1fdb8c74158ca4d91f5ef682 SHA256 c483b9d6edfe2aaf91da388608ec351c7cdfd921e8f3d4701bd5bbb627edffeb
+MISC ChangeLog 11957 RMD160 491fe266fd42b025dc5f35c9c8980a6ad3203112 SHA1 2b5c0fdf3b16e478008d764b027e77103ce61e9e SHA256 7009bb3fdbeb00d212e59beb493ee83fcb4bac81eb18c45bd074a457a513d080
 MISC metadata.xml 410 RMD160 063e81d4d38be2fa6f093828b42a0ee3e5b2b582 SHA1 e73d09647dcac3413d7bccb6f1d2a0bc50e60f48 SHA256 3fc38345f9430d71c6369f84fc1b6248bc8aa0ec74cb4ae5b2797fe01cf48721
